<resources>
    <string name="app_name">Pokémon Shiny Tracker</string>
    <string name="pokemon_label">Pokémon:</string>
    <string name="origin_game_label">Hunting In:</string>
    <string name="start_date_label">Started:</string>
    <string name="na">N/A</string>
    <string name="date_picker_label">Pick Date</string>
    <string name="method_label">Method:</string>
    <string name="method_hint">i.e. Soft Resets</string>
    <string name="counter_label">Counter:</string>
    <string name="increment_symbol">+</string>
    <string name="decrement_symbol">-</string>
    <string name="hunt_complete_label">Hunt Completed?</string>
    <string name="finish_date_label">Finished:</string>
    <string name="current_game_label">Currently In:</string>
    <string name="phase_label">Phase:</string>
    <string name="search_label">Search</string>
    <string name="no_hunts_message">You have no saved shiny hunts!\n</string>
    <string name="name_placeholder">Name</string>
    <string name="origin_game_icon_desc">Origin Game Icon</string>
    <string name="current_game_icon_desc">Current Game Icon</string>
    <string name="default_counter">0</string>
    <string name="pokemon_search_hint">Enter Pokémon Name</string>
    <string name="pokemon_name_placeholder">Please select a Pokémon.</string>
    <string name="confirm_selection">Confirm Selection</string>
    <string name="select_a_pokemon">Select a Pokémon</string>
    <string name="pokemon_item_image_description">Pokémon Item Image Placeholder</string>
    <string name="generation_1_label">Generation 1</string>
    <string name="generation_2_label">Generation 2</string>
    <string name="generation_3_label">Generation 3</string>
    <string name="generation_4_label">Generation 4</string>
    <string name="generation_5_label">Generation 5</string>
    <string name="select_a_game">Select Game</string>
    <string name="game_item_image_description">Game Item Image Placeholder</string>
    <string name="back_button_text">Back</string>
    <string name="save_button_text">Save</string>
    <string name="delete_button_text">Delete</string>
    <string name="zero">0</string>
    <string name="pokemon_image_description">Image of the selected Pokémon</string>
    <string name="left_button_text">◀</string>
    <string name="right_button_text">▶</string>
    <string name="search_pokemon">Search Pokémon</string>
    <string name="move_up">Button to move shiny hunt up</string>
    <string name="move_down">Button to move shiny hunt down</string>
    <string name="edit">Edit</string>
    <string name="game_item_name_placeholder">Game</string>
    <string name="filter_label">Filter</string>
    <string name="clear_filters_label">Clear Filters</string>
    <string name="expand_all_label">Expand All:</string>
    <string name="low">Low</string>
    <string name="high">High</string>
    <string name="origin_games_label">Origin Games:</string>
    <string name="completion_status_label">Completion Status:</string>
    <string name="games_selected_default">0 games selected.</string>
    <string name="pokemon_selected_default">0 Pokémon forms selected.</string>
    <string name="in_progress_label">In Progress</string>
    <string name="completed_label">Completed</string>
    <string name="both_label">Both</string>
    <string name="current_games_label">Current Games:</string>
    <string name="to">to</string>
    <string name="confirm_filters">Confirm Filters</string>
    <string name="select_all_label">Select All:</string>
    <string name="dropdown_button">Button to toggle visibility of Pokémon Forms</string>
    <string name="notes_label">Notes:</string>
    <string name="notes_hint">Add notes here.</string>
    <string name="selected_pokemon_label">Selected Pokémon:</string>
    <string name="sort_label">Sort</string>
    <string name="confirm_sort">Confirm Sort</string>
    <string name="sort_by">Sort By:</string>
    <string name="sort_order">Order:</string>
    <string name="ascending_label">Ascending</string>
    <string name="descending_label">Descending</string>
    <string name="sort_description">Button to sort shiny hunts</string>
    <string name="new_description">Button to create a new shiny hunt</string>
    <string name="filter_description">Button to filter shiny hunts</string>
    <string name="counter_multiplier_decrement_description">Button to decrement the counter multiplier</string>
    <string name="counter_multiplier_increment_description">Button to increment the counter multiplier</string>
    <string name="counter_multiplier_placeholder">1x</string>
    <string name="counter_decrement_description">Button to decrement the shiny hunt\'s counter</string>
    <string name="counter_increment_description">Button to increment a shiny hunt\'s counter</string>
    <string name="previous_form_description">Button to swap to the previous form</string>
    <string name="next_form_description">Button to swap to the next form</string>
    <string name="phase_decrement_description">Button to decrement the shiny hunt\'s phase</string>
    <string name="phase_increment_description">Button to increment the shiny hunt\'s phase</string>
    <string name="calendar_button_description">Button to open a calendar</string>
    <string name="game_select_button_description">Button to select a game</string>
    <string name="pokemon_select_button_description">Button to select a Pokemon</string>
    <string name="date_unselect_description">Button to unselect a date</string>
    <string name="location_label">Location:</string>
    <string name="location_hint">i.e. Route 1</string>
    <string name="nickname_label">Nickname:</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="saved_hunts">Saved Hunts</string>
    <string name="shiny_living_dex">Shiny Living Dex</string>
    <string name="export_hunts">Export Hunts</string>
    <string name="import_hunts">Import Hunts</string>
    <string name="app_logo">App Logo</string>
    <string name="nav_header_app_name">Pokémon\nShiny\nTracker</string>
    <string name="pokeball_label">Pokéball:</string>
    <string name="unselect_game_button_description">Button to unselect a game</string>
    <string name="unselect_pokeball_description">Button to unselect a pokeball</string>
    <string name="pokeball_name_placeholder">Poké Ball</string>
    <string name="pokeball_item_image_description">Pokeball Item Image Placeholder</string>
    <string name="form_name_placeholder">Form Name</string>
    <string name="data_transfer">Data Transfer</string>
    <string name="export_hunts_label">Exporting Hunts:</string>
    <string name="export_hunts_description">Clicking the \"Export Hunts\" button below will generate a CSV file containing all of your currently saved shiny hunt logs. This CSV file will be downloaded to your device\'s local storage. You can keep it as a back up of your data, or, if you want to migrate your data to another device, you can transfer it using your preferred file transfer method (for example, emailing it to yourself and downloading it on the new device).</string>
    <string name="import_hunts_label">Importing Hunts:</string>
    <string name="import_hunts_description">Clicking the \"Import Hunts\" button below will allow you to upload a CSV file that was previously exported from the app and import that data into the app. This is handy if you are trying to transfer your shiny hunt logs from one device to another. Before using this feature, make sure you don\'t have any saved shiny hunt logs on this device that you don\'t want to delete, as importing shiny hunt logs will automatically overwrite all pre-existing data.</string>

</resources>